--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
     <div class="container">
       <div class="box">
         <div class="box-1">
-          <img src="./images/image-daniel.jpg" alt="" />
-          <h1>Daniel Clifford</h1>
-          <h2>Verified Graduate</h2>
+          <div class="user-1"></div>
+          <img src="./images/image-daniel.jpg" alt="" height= "40" width= "40"/>
+          <h2>Daniel Clifford</h2>
+          <h3>Verified Graduate</h3>
           <p class="first">
             I received a job offer mid-course, and the subjects I learned were
             current, if not more so, in the company I joined. I honestly feel I
@@ -48,9 +49,10 @@
           </p>
         </div>
         <div class="box-2">
-          <img src="./images/image-jonathan.jpg" alt="" />
-          <h1>Jonathan Walters</h1>
-          <h2>Verified Graduate</h2>
+          <div class="user-2"></div>
+          <img src="./images/image-jonathan.jpg" alt="" height= "40" width= "40"/>
+          <h2>Jonathan Walters</h2>
+          <h3>Verified Graduate</h3>
           <p class="first">
             The team was very supportive and kept me motivated
           </p>
@@ -61,9 +63,10 @@
           </p>
         </div>
         <div class="box-3">
-          <img src="./images/image-jeanette.jpg" alt="" />
-          <h1>Jeanette Harmon</h1>
-          <h2>Verified Graduate</h2>
+          <div class="user-3"></div>
+          <img src="./images/image-jeanette.jpg" alt="" height= "40" width= "40"/>
+          <h2>Jeanette Harmon</h2>
+          <h3>Verified Graduate</h3>
           <p class="first">An overall wonderful and rewarding experience</p>
           <p class="second">
             “ Thank you for the wonderful experience! I now have a job I really
@@ -71,9 +74,10 @@
           </p>
         </div>
         <div class="box-4">
-          <img src="./images/image-patrick.jpg" alt="" />
-          <h1>Patrick Abrams</h1>
-          <h2>Verified Graduate</h2>
+          <div class="user-4"></div>
+          <img src="./images/image-patrick.jpg" alt="" height= "40" width= "40" />
+          <h2>Patrick Abrams</h2>
+          <h3>Verified Graduate</h3>
           <p class="first">
             Awesome teaching support from TAs who did the bootcamp themselves.
             Getting guidance from them and learning from their experiences was
@@ -90,9 +94,10 @@
         </div>
 
         <div class="box-5">
-          <img src="./images/image-kira.jpg" alt="" />
-          <h1>Kira Whittle</h1>
-          <h2>Verified Graduate</h2>
+          <div class="user-5"></div>
+          <img src="./images/image-kira.jpg" alt="" height= "40" width= "40" />
+          <h2>Kira Whittle</h2>
+          <h3>Verified Graduate</h3>
           <p class="first">
             Such a life-changing experience. Highly recommended!
           </p>
