--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="./images/favicon-32x32.png"
     />
 
-    <title>Frontend Mentor | [Challenge Name Here]</title>
+    <title>Frontend Mentor | [Room10]</title>
     <link rel="stylesheet" href="styles.css" />
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
@@ -27,101 +27,106 @@
   </head>
   <body>
     <div class="container">
-      <div class="box">
-        <div class="box-1">
-          <div class="user-1"></div>
-          <img src="./images/image-daniel.jpg" alt="" height= "40" width= "40"/>
-          <h2>Daniel Clifford</h2>
-          <h3>Verified Graduate</h3>
-          <p class="first">
-            I received a job offer mid-course, and the subjects I learned were
-            current, if not more so, in the company I joined. I honestly feel I
-            got every penny’s worth.
-          </p>
-          <p class="second">
-            “ I was an EMT for many years before I joined the bootcamp. I’ve
-            been looking to make a transition and have heard some people who had
-            an amazing experience here. I signed up for the free intro course
-            and found it incredibly fun! I enrolled shortly thereafter. The next
-            12 weeks was the best - and most grueling - time of my life. Since
-            completing the course, I’ve successfully switched careers, working
-            as a Software Engineer at a VR startup. ”
-          </p>
+      <div class="box box-1">
+        <div class="user">
+          <img src="./images/image-daniel.jpg" alt="" />
+          <div>
+            <h2>Daniel Clifford</h2>
+            <h3>Verified Graduate</h3>
+          </div>
         </div>
-        <div class="box-2">
-          <div class="user-2"></div>
-          <img src="./images/image-jonathan.jpg" alt="" height= "40" width= "40"/>
-          <h2>Jonathan Walters</h2>
-          <h3>Verified Graduate</h3>
-          <p class="first">
-            The team was very supportive and kept me motivated
-          </p>
-          <p class="second">
-            “ I started as a total newbie with virtually no coding skills. I now
-            work as a mobile engineer for a big company. This was one of the
-            best investments I’ve made in myself. ”
-          </p>
+        <p class="first">
+          I received a job offer mid-course, and the subjects I learned were
+          current, if not more so, in the company I joined. I honestly feel I
+          got every penny’s worth.
+        </p>
+        <p class="second">
+          “ I was an EMT for many years before I joined the bootcamp. I’ve been
+          looking to make a transition and have heard some people who had an
+          amazing experience here. I signed up for the free intro course and
+          found it incredibly fun! I enrolled shortly thereafter. The next 12
+          weeks was the best - and most grueling - time of my life. Since
+          completing the course, I’ve successfully switched careers, working as
+          a Software Engineer at a VR startup. ”
+        </p>
+      </div>
+      <div class="box box-2">
+        <div class="user">
+          <img src="./images/image-jonathan.jpg" alt="" />
+          <div>
+            <h2>Jonathan Walters</h2>
+            <h3>Verified Graduate</h3>
+          </div>
         </div>
-        <div class="box-3">
-          <div class="user-3"></div>
-          <img src="./images/image-jeanette.jpg" alt="" height= "40" width= "40"/>
-          <h2>Jeanette Harmon</h2>
-          <h3>Verified Graduate</h3>
-          <p class="first">An overall wonderful and rewarding experience</p>
-          <p class="second">
-            “ Thank you for the wonderful experience! I now have a job I really
-            enjoy, and make a good living while doing something I love. ”
-          </p>
+        <p class="first">The team was very supportive and kept me motivated</p>
+        <p class="second">
+          “ I started as a total newbie with virtually no coding skills. I now
+          work as a mobile engineer for a big company. This was one of the best
+          investments I’ve made in myself. ”
+        </p>
+      </div>
+      <div class="box box-3">
+        <div class="user">
+          <img src="./images/image-jeanette.jpg" alt="" />
+          <div>
+            <h2>Jeanette Harmon</h2>
+            <h3>Verified Graduate</h3>
+          </div>
         </div>
-        <div class="box-4">
-          <div class="user-4"></div>
-          <img src="./images/image-patrick.jpg" alt="" height= "40" width= "40" />
-          <h2>Patrick Abrams</h2>
-          <h3>Verified Graduate</h3>
-          <p class="first">
-            Awesome teaching support from TAs who did the bootcamp themselves.
-            Getting guidance from them and learning from their experiences was
-            easy.
-          </p>
-          <p class="second">
-            “ The staff seem genuinely concerned about my progress which I find
-            really refreshing. The program gave me the confidence necessary to
-            be able to go out in the world and present myself as a capable
-            junior developer. The standard is above the rest. You will get the
-            personal attention you need from an incredible community of smart
-            and amazing people. ”
-          </p>
+        <p class="first">An overall wonderful and rewarding experience</p>
+        <p class="second">
+          “ Thank you for the wonderful experience! I now have a job I really
+          enjoy, and make a good living while doing something I love. ”
+        </p>
+      </div>
+      <div class="box box-4">
+        <div class="user">
+          <img src="./images/image-patrick.jpg" alt="" />
+          <div>
+            <h2>Patrick Abrams</h2>
+            <h3>Verified Graduate</h3>
+          </div>
+        </div>
+        <p class="first">
+          Awesome teaching support from TAs who did the bootcamp themselves.
+          Getting guidance from them and learning from their experiences was
+          easy.
+        </p>
+        <p class="second">
+          “ The staff seem genuinely concerned about my progress which I find
+          really refreshing. The program gave me the confidence necessary to be
+          able to go out in the world and present myself as a capable junior
+          developer. The standard is above the rest. You will get the personal
+          attention you need from an incredible community of smart and amazing
+          people. ”
+        </p>
+      </div>
+      <div class="box box-5">
+        <div class="user">
+          <img src="./images/image-kira.jpg" alt="" />
+          <div>
+            <h2>Kira Whittle</h2>
+            <h3>Verified Graduate</h3>
+          </div>
         </div>
 
-        <div class="box-5">
-          <div class="user-5"></div>
-          <img src="./images/image-kira.jpg" alt="" height= "40" width= "40" />
-          <h2>Kira Whittle</h2>
-          <h3>Verified Graduate</h3>
-          <p class="first">
-            Such a life-changing experience. Highly recommended!
-          </p>
-          <p class="second">
-            “ Before joining the bootcamp, I’ve never written a line of code. I
-            needed some structure from professionals who can help me learn
-            programming step by step. I was encouraged to enroll by a former
-            student of theirs who can only say wonderful things about the
-            program. The entire curriculum and staff did not disappoint. They
-            were very hands-on and I never had to wait long for assistance. The
-            agile team project, in particular, was outstanding. It took my
-            learning to the next level in a way that no tutorial could ever
-            have. In fact, I’ve often referred to it during interviews as an
-            example of my developent experience. It certainly helped me land a
-            job as a full-stack developer after receiving multiple offers. 100%
-            recommend! ”
-          </p>
-        </div>
+        <p class="first">
+          Such a life-changing experience. Highly recommended!
+        </p>
+        <p class="second">
+          “ Before joining the bootcamp, I’ve never written a line of code. I
+          needed some structure from professionals who can help me learn
+          programming step by step. I was encouraged to enroll by a former
+          student of theirs who can only say wonderful things about the program.
+          The entire curriculum and staff did not disappoint. They were very
+          hands-on and I never had to wait long for assistance. The agile team
+          project, in particular, was outstanding. It took my learning to the
+          next level in a way that no tutorial could ever have. In fact, I’ve
+          often referred to it during interviews as an example of my developent
+          experience. It certainly helped me land a job as a full-stack
+          developer after receiving multiple offers. 100% recommend! ”
+        </p>
       </div>
     </div>
-
-    <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
   </body>
 </html>
